<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="32dp"
    android:paddingBottom="32dp"
    android:background="#BBDEFB"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="32dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/op1"
            android:layout_marginRight="8dp"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/op2"
            android:layout_marginLeft="8dp"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/o1"
            android:layout_height="match_parent"
            android:id="@+id/op_1"
            android:inputType="number"
            android:background="#FFFFFF"
            android:layout_marginRight="8dp"
            android:textSize="25sp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/o2"
            android:layout_height="match_parent"
            android:id="@+id/op_2"
            android:inputType="number"
            android:background="#FFFFFF"
            android:layout_marginLeft="8dp"
            android:textSize="25sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:paddingTop="16dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/result"
        android:background="#FFFFFF"

        android:textSize="25sp"/>

        <RadioGroup

            android:id="@+id/op_group"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/suma"
            android:text="@string/suma"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resta"
            android:text="@string/resta"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mult"
            android:text="@string/multi"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/div"
            android:text="@string/div"/>
    </RadioGroup>

    <Button
        android:id="@+id/boton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/botonp"
        android:text="@string/operar" />

</LinearLayout>
